Add backwards compatibility for /transactions
