# backend-app/src/presentation-layer/app.js
@@ -8,7 +8,7 @@ const yaml = require('yamljs')
 const openApiDocument = yaml.load(path.join(__dirname, '../../docs/openapi.yaml'))
 const errorsMiddleware = require('./middleware/errors.middleware')
 
-module.exports = function({chargersRouter, transactionRouter, authenticationRouter, adminRouter, chargePointsRouter, invoicesRouter, ocppInterface, testRouter }) { //authenticationRouter
+module.exports = function({chargersRouter, transactionRouter, transactionsRouter, authenticationRouter, adminRouter, chargePointsRouter, invoicesRouter, ocppInterface, testRouter }) { //authenticationRouter
 
     app.set('views', '/backend-app/src/presentation-layer/views')
     app.engine('.hbs', expressHandlebars({ extname: '.hbs' }));
@@ -36,7 +36,7 @@ module.exports = function({chargersRouter, transactionRouter, authenticationRout
     app.use('/swagger', swaggerUi.serve, swaggerUi.setup(openApiDocument));
     app.use('/chargers', chargersRouter)
     app.use('/transaction', transactionRouter)
-    app.use('/transactions', transactionRouter)
+    app.use('/transactions', transactionsRouter)
     app.use('/chargePoints', chargePointsRouter)
     app.use('/auth', authenticationRouter)
     app.use('/admin', adminRouter)
